Removed "overflow: auto" from #content to try and fix slowdowns/stalls lots of people were having with firefox.
git-svn-id: https://journa-list.googlecode.com/svn/trunk@119 dbcfc70c-e32f-0410-8862-5d2c5c102a8f

--- a/jl/web/style.css
+++ b/jl/web/style.css
@@ -146,7 +146,7 @@ body, #menu, #head {
   padding:10px 5px;
   clear:both;
   width:770px;
-  overflow:auto;
+  /*overflow:auto;*/
   border-bottom:1px solid #ECECEC;
 }
 
